--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -9,12 +9,13 @@
     &_fz16 {
         font-size: 16px;
         line-height: 24px;
+        margin-bottom: 0;
     }
     &_fz20 {
         font-size: 20px;
         line-height: 30px;
     }
-    &__fz36 {
+    &_fz36 {
         font-size: 36px;
     }
     &_fz48 {
