--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -40,6 +40,17 @@
             justify-content: center;
         }
     }
+    .portfolio {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 280px);
+            justify-content: space-around;
+            row-gap: 35px;
+            .horizontal, .vertical {
+                grid-row: unset;
+                grid-column: unset;
+            }
+        }
+    }
 }
 
 @media (max-width: 992px) {
@@ -80,6 +91,12 @@
         &__loading {
             margin-top: 60px;
             grid-template: repeat(3,minmax(70px,auto))/repeat(2,335px);
+        }
+    }
+    .price {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 350px);
+            padding: 0;
         }
     }
 }
@@ -136,6 +153,16 @@
         }
         &__loading {
             grid-template: repeat(6,minmax(70px,auto))/repeat(1,335px);
+        }
+    }
+    .portfolio {
+        padding-top: 40px;
+    }
+    .price {
+        padding-top: 40px;
+        &__wrapper {
+            margin-top: 20px;
+            justify-content: center;
         }
     }
 }
@@ -204,6 +231,11 @@
             margin-top: 40px;
             grid-template: repeat(6,minmax(70px,auto))/repeat(1,300px);
             row-gap: 40px;
+        }
+    }
+    .price {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit,295px);
         }
     }
 }
